# video-generate-agent

./: .env.example  .gitmodules  README.md  README_EN.md  main.py  pyproject.toml  test_task_manager.py
agents/: __init__.py  character_agent.py  image_agent.py  main_agent.py  novel_agent.py  scene_agent.py  talk_agent.py
assets/novel/: index.txt
assets/workflow/: config.json
mcp_servers/: web_search.py
src/components/: DownloadIconComponent.jsx
utils/: config.py  edge-tts.py  llm.py  novel.py  output_tree.py  scene.py  task_manager.py  tts.py  video.py
web/: package-lock.json  package.json  pnpm-lock.yaml
web/app/: RightPanel.tsx  globals.css  layout.tsx  mock.ts  page-new.tsx  page-old.tsx  page.tsx
web/app/api/copilotkit/: route.ts
web/app/api/file-tree/: route.ts
web/app/api/files/[...path]/: route.ts
web/app/api/files/content/[...path]/: route.ts
web/app/components/: AgentStateDisplay.tsx  FilePreview.tsx  FileTree.tsx  ProgressIndicator.tsx  QuickActions.tsx
web/public/mock/scripts/: scene_0.txt
